linkding-update.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
---
# 3. Linkding Deployment with Persistent Storage and Context Path
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker1 
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.45.0
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data-pvc
---
# 4. Linkding Service
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
---
# 6. Nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
# 7. Nginx Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: linkding
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
